# dofus-tools

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
include/: MainWindow.hpp  ObjectEffect.hpp  ObjectItem.hpp  PacketCapture.hpp  ResourceManager.hpp  Utils.hpp
include/packets/: AReceivedPacket.hpp  ASentPacket.hpp  IPacket.hpp
include/packets/factory/: PacketFactory.hpp
include/packets/impl/: BasicPingPacket.hpp  ChatServerWithObjectMessage.hpp  ContainerInventoryContentPacket.hpp  GameContextRemoveElementPacket.hpp  InventoryContentPacket.hpp
src/: MainWindow.cpp  ObjectEffect.cpp  ObjectItem.cpp  PacketCapture.cpp  ResourceManager.cpp  Utils.cpp  main.cpp
src/packets/: PacketNames.cpp
src/packets/impl/: BasicPingPacket.cpp  ChatMessagePacket.cpp  ChatServerWithObjectMessage.cpp  ContainerInventoryContentPacket.cpp  ExchangeBidHouseSearchMessage.cpp  GameContextRemoveElementPacket.cpp  InventoryContentPacket.cpp  MapMovementPacket.cpp
